# Financial-Analysis-Toolkit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BEGINNER_SETUP.md  CLAUDE.md  LICENSE  PRD.md  README.md  config_result.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  index.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
examples/: README.md  custom_vpw_table.yml  guyton_klinger_example.yml  retirement_advanced.yml  retirement_basic.yml  retirement_walkthrough.ipynb  retirement_with_taxes.yml  vpw_custom_example.yml  vpw_example.yml
scripts/: bench_market.py  bench_vectorized.py
src/capstone_finance/: __init__.py  cli.py  config.py
src/capstone_finance/core/: __init__.py  ledger.py  market.py  models.py  tax.py
src/capstone_finance/reporting/: __init__.py  plots.py  summary.py
src/capstone_finance/strategies/: __init__.py  base.py  constant_percentage.py  dummy.py  endowment.py  four_percent_rule.py  guyton_klinger.py  vpw.py
tests/: test_config.py  test_version.py
tests/cli/: test_cli.py
tests/core/: __init__.py  test_ledger.py  test_market.py  test_models.py  test_optimization.py  test_tax.py
tests/reporting/: test_plots.py  test_summary.py
tests/strategies/: __init__.py  property_fuzz_test.py  test_constant_percentage.py  test_endowment.py  test_four_percent_rule.py  test_guyton_klinger.py  test_vpw.py
